@@ -31,7 +31,7 @@
 023a                #Lv JobLv ボーナスポイント スキルポイント
 0235                #EXP/JOBEXP
 1f72                #もてなしタイニーアイコン
-157c     354 Failed #キャラの状態
+157c     354 Unknow #キャラの状態
 022d                #HEARTスキル
 0223                #属性値
 122a     354   Pass #モンスターID通知
