@@ -238,7 +238,7 @@ class MapDataHandler:
 		self.send("0231", self.pc) #最大CAPA/PAYL
 		self.send("0221", self.pc) #最大HP/MP/SP
 		self.send("021c", self.pc) #現在のHP/MP/SP/EP
-		#self.send("157c", self.pc) #キャラの状態 #changed from ver353+
+		self.send("170c", self.pc) #キャラの状態
 		self.send("0212", self.pc) #ステータス・補正・ボーナスポイント
 		self.send("0217", self.pc) #詳細ステータス
 		self.send("0226", self.pc, 0) #スキル一覧 一次職
@@ -277,7 +277,7 @@ class MapDataHandler:
 		self.send("0231", self.pc) #最大CAPA/PAYL
 		self.send("0221", self.pc) #最大HP/MP/SP
 		self.send("021c", self.pc) #現在のHP/MP/SP/EP
-		#self.send("157c", self.pc) #キャラの状態 #changed from ver353+
+		self.send("170c", self.pc) #キャラの状態
 		self.send("0212", self.pc) #ステータス・補正・ボーナスポイント
 		self.send("0217", self.pc) #詳細ステータス
 		self.send("0226", self.pc, 0) #スキル一覧 一次職
