@@ -1,3 +1,6 @@
+2012-12-28
+	packet fixes (still continue attack after monster dead, wait fix)
+
 2012-12-27
 	update database to 354
 	353+ packet fixes
